# cppbot

./: .gitignore  CMakeLists.txt  README.md
src/: bot.cc  bot.h  main.cc
test/: Marathon.txt  cppbot_test.cc  math_test.cc
